--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <a href="#" class="logo">logo</a>
         <ul>
-            <li><a href="5">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">Contact</a></li>
