--- a/index.html
+++ b/index.html
@@ -1,20 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Parallax Scrolling Website</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="#" class="logo">logo</a>
-        <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+      <a href="#" class="logo">logo</a>
+      <ul>
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </header>
-</body>
+    <section>
+      <img src="image/stars.png" id="stars" />
+      <img src="image/moon.png" id="moon" />
+      <img src="image/mountains_behind.png" id="mountains_behind" />
+      <h2 id="text">Moon Light</h2>
+      <a href="#" id="btn">Explore</a>
+      <img src="image/mountains_front.png" id="mountains_front" />
+    </section>
+    <div class="sec" id="sec">
+      <h2>Parallax Scrolling Effects</h2>
+      <p>
+        Syrian and Russian jets are stepping up strikes on opposition forces in
+        northern Syria in retaliation for the sudden offensive that has cost the
+        regime control of the country’s second largest city, Aleppo. The
+        offensive has also led to the capture by the rebel alliance of an
+        important military base east of Aleppo and large areas of both Aleppo
+        and provinces. It has met little resistance on the ground from regime
+        forces and also comes at a time when Syria’s key backers - Iran and
+        Russia - are focusing on their own conflicts. The rebels’ sweeping
+        success has posed the biggest challenge in eight years to President
+        al-Assad, when Russian air power helped reverse rebel gains in the civil
+        war. The newly formed rebel coalition, which calls itself the Military
+        Operations Command, has captured key sites across Aleppo, including the
+        airport, where video verified by CNN showed -clad fighters inside the
+        main terminal.
+        <br><br />
+        The rebels’ sweeping success has posed the biggest challenge in eight
+        years to President al-Assad, when Russian air power helped reverse rebel
+        gains in the civil war. The rebels’ sweeping success has posed the
+        biggest challenge in eight years to President al-Assad, when Russian air
+        power helped reverse rebel gains in the civil war.
+        <br><br />
+        The offensive has also led to the capture by the rebel alliance of an
+        important military base east of Aleppo and large areas of both Aleppo
+        and provinces. It has met little resistance on the ground from regime
+        forces and also comes at a time when Syria’s key backers - Iran and
+        Russia - are focusing on their own conflicts. The rebels’ sweeping
+        success has posed the biggest challenge in eight years to President
+        al-Assad, when Russian air power helped reverse rebel gains in the civil
+        war. The newly formed rebel coalition, which calls itself the Military
+        Operations Command, has captured key sites across Aleppo, including the
+        airport, where video verified by CNN showed -clad fighters inside the
+        main terminal.
+        <br><br />
+        The rebels’ sweeping success has posed the biggest challenge in eight
+        years to President al-Assad, when Russian air power helped reverse rebel
+        gains in the civil war. The rebels’ sweeping success has posed the
+        biggest challenge in eight years to President al-Assad, when Russian air
+        power helped reverse rebel gains in the civil war.
+        <br><br />
+        The rebels’ sweeping success has posed the biggest challenge in eight
+        years to President al-Assad, when Russian air power helped reverse rebel
+        gains in the civil war. The rebels’ sweeping success has posed the
+        biggest challenge in eight years to President al-Assad, when Russian air
+        power helped reverse rebel gains in the civil war.
+      </p>
+    </div>
+    <script>
+        let stars = document.getElementById('stars')
+        let moon = document.getElementById('moon')
+        let mountains_behind = document.getElementById('mountains_behind')
+        let text = document.getElementById('text')
+        let btn = document.getElementById('btn')
+        let mountains_front = document.getElementById('mountains_front')
+        let header = document.querySelector('header');
+
+        window.addEventListener('scroll', function(){
+            let value = window.scrollY;
+            stars.style.left = value * 0.25 + 'px';
+            moon.style.top = value * 1.05 + 'px';
+            mountains_behind.style.top = value * 0.5 + 'px';
+            mountains_front.style.top = value * 0 + 'px';
+            text.style.marginRight = value * 4 + 'px';
+            text.style.marginTop = value * 1.5 + 'px';
+            btn.style.marginTop = value * 1.5 + 'px';
+            header.style.top = value * 0.5 + 'px';
+        })
+    </script>
+  </body>
 </html>
